design-principles-02/src/main/java/com/farhad/example/design_principles02/lsp/demo1/good/Car.java
package com.farhad.example.design_principles02.lsp.demo1.good;

public class Car extends RoadVehicle {

	public Car(String name) {
		super(name);
	}

}
