design-principles-02/src/main/java/com/farhad/example/design_principles02/lsp/demo1/bad/Car.java
package com.farhad.example.design_principles02.lsp.demo1.bad;

public class Car extends Vehicle {

	public Car(String name) {
		super(name);
	}
	
}
